# n-gram-index

./: CMakeLists.txt
src/: NGram_p.h
src/Python/: n_gram.cpp  n_gram.h
